force-app/main/default/objects/TranslationMaster__c/TranslationMaster__c.object-meta.xml
<CustomObject>
    <description>ヴァイタル様にて作成。出品時の翻訳に使用している様子。20230424山本</description>
    <label>翻訳マスタ</label>
    <nameField>
        <displayFormat>TM{00000000}</displayFormat>
        <label>翻訳マスタ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>