force-app/main/default/objects/TranslationMaster__c/fields/Chinese__c.field-meta.xml
<CustomField>
    <fullName>Chinese__c</fullName>
    <label>中国語</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>