force-app/main/default/objects/TranslationMaster__c/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <label>英語</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>