force-app/main/default/objects/TranslationMaster__c/fields/ExtraID__c.field-meta.xml
<CustomField>
    <fullName>ExtraID__c</fullName>
    <externalId>true</externalId>
    <label>外部ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>