force-app/main/default/objects/TranslationMaster__c/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>項目API名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>