force-app/main/default/objects/TranslationMaster__c/fields/Japanese__c.field-meta.xml
<CustomField>
    <fullName>Japanese__c</fullName>
    <label>日本語</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>