force-app/main/default/objects/TranslationMaster__c/fields/Russian__c.field-meta.xml
<CustomField>
    <fullName>Russian__c</fullName>
    <label>ロシア語</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>