force-app/main/default/objects/TranslationMaster__c/fields/Spanish__c.field-meta.xml
<CustomField>
    <fullName>Spanish__c</fullName>
    <label>スペイン語</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>