force-app/main/default/objects/TranslationMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field__c</columns>
    <columns>FieldApiName__c</columns>
    <columns>Number__c</columns>
    <columns>Japanese__c</columns>
    <columns>English__c</columns>
    <columns>Chinese__c</columns>
    <columns>Spanish__c</columns>
    <columns>Russian__c</columns>
    <columns>ExtraID__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>